--- a/index.html
+++ b/index.html
@@ -22,18 +22,18 @@
          _gat._getTrackerByName()._trackEvent(category, action);
          setTimeout('document.location = "' + link.href + '"', 100);
       }
-			
+
     </script>
 </head>
 <body>
     <div class="scrollblock block-title">
-        <h1>git - the simple guide</h1>
-        <p>just a simple guide for getting started with git ;)</p>
+        <h1>a simple guide for forking workflow</h1>
+        <p></p>
         <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
         <p class="meta">
             by <a href="https://www.linkedin.com/in/dilorc2/">Carlo DiLorenzo</a>
             <br />credits to <a href="http://www.twitter.com/tfnico">@tfnico</a>, <a href="http://www.twitter.com/fhd">@fhd</a> and <a href="http://www.namics.com">Namics</a><br />
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/3a2x1iJFJWc" frameborder="0" allowfullscreen></iframe>
+						<!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/3a2x1iJFJWc" frameborder="0" allowfullscreen></iframe> -->
         </p>
         <div class="announcement">
             <a href="http://frontify.com/?utm_source=gitguide&amp;utm_campaign=founder_frontify">
@@ -47,70 +47,95 @@
     <div class="scrollblock block-setup">
         <h2>setup</h2>
         <p>
+
             <a href="http://git-scm.com/download/mac">Download git</a>
         </p>
     </div>
     <a name="create"></a>
     <div class="scrollblock block-create">
-        <h2>create a new repository</h2>
+        <h2>Two Git Repositories</h2>
         <p>
-            create a new directory, open it and perform a <br />
+					Private local one and a public server-side one.
+
+            <!-- create a new directory, open it and perform a <br />
             <code>git init</code><br />
-            to create a new git repository.
+            to create a new git repository. -->
         </p>
     </div>
     <a name="checkout"></a>
     <div class="scrollblock block-checkout">
-        <h2>checkout a repository</h2>
+        <h2>Advantages of Forking Workflow</h2>
         <p>
-            create a working copy of a local repository by running the command<br />
+					Developers push to their own server-side repositories.<br/>
+          This allows project maintainer be the filter to the official codebase.<br/>
+					This is ideal workflow for open source projects.<br/>
+
+            <!-- create a working copy of a local repository by running the command<br />
             <code>git clone /path/to/repository</code><br />
             when using a remote server, your command will be<br />
-            <code>git clone username@host:/path/to/repository</code>
+            <code>git clone username@host:/path/to/repository</code> -->
         </p>
     </div>
 
     <a name="trees"></a>
     <div class="scrollblock block-trees">
-        <h2>workflow</h2>
+        <h2>Clone from forked repositories</h2>
         <p>
-            your local repository consists of three "trees" maintained by git.
+					Clone from you own forked repositories.<br/>
+					<code>git clone https://repo</code>
+
+            <!-- your local repository consists of three "trees" maintained by git.
             the first one is your <code>Working Directory</code> which holds the actual files.
             the second one is the <code>Index</code> which acts as a staging area and
-            finally the <code>HEAD</code> which points to the last commit you've made.
+            finally the <code>HEAD</code> which points to the last commit you've made. -->
         </p>
-        <img src="img/trees.png" alt="" />
+        <!-- <img src="img/trees.png" alt="" /> -->
     </div>
-		<div class="scrollblock block-setup">
-							<h2>types workflow</h2>
+		<!-- <div class="scrollblock block-setup"> -->
+							<!-- <h2>types workflow</h2>
 							<br/>
 							<br/>
 		<a href="https://www.atlassian.com/git/tutorials/comparing-workflows#gitflow-workflow">Gitflow Workflow</a>
 		<a href="https://www.atlassian.com/git/tutorials/comparing-workflows#forking-workflow">Forking Workflow</a>
+	</div> -->
+	<div class="scrollblock block-create">
+			<h2>Developers work on their features</h2>
+			<p>
+				In local repositories that was just cloned, developers can edit code, commit changes, and create branches. </br>
+				<code>git checkout -b some-feature</code></br>
+				<code>#Edit some code</code></br>
+				<code>get commit -a -m "added feature"</code></br>
+				When project has moved forward, to update new commits do command</br>
+				<code>git pull upstream master</code>
+			</p>
 	</div>
     <a name="add"></a>
     <div class="scrollblock block-add">
-        <h2>add &amp; commit</h2>
+        <h2>Publish a feature</h2>
         <p>
-            You can propose changes (add it to the <b>Index</b>) using<br />
-            <code>git add &lt;filename&gt;</code><br />
-            <code>git add .</code><br />
+            Push to the public repository.<br />
+            <code>git push origin feature-branch</code><br />
+            <!-- <code>git add .</code><br />
             This is the first step in the basic git workflow. To actually commit these changes use<br />
             <code>git commit -m "Commit message"</code><br />
-            Now the file is committed to the <b>HEAD</b>, but not in your remote repository yet.
+            Now the file is committed to the <b>HEAD</b>, but not in your remote repository yet. -->
         </p>
     </div>
     <a name="push"></a>
     <div class="scrollblock block-remote">
-        <h2>pushing changes</h2>
+        <h2>Project Maintainer Integrates</h2>
         <p>
-            Your changes are now in the <b>HEAD</b> of your local working copy. To send those changes to your remote repository, execute <br />
+					Fetch and integrate to master repo</br>
+					<code>git fetch https://devrepo_feature-branch</code><br />
+					Inspect the changes
+					
+            <!-- Your changes are now in the <b>HEAD</b> of your local working copy. To send those changes to your remote repository, execute <br />
             <code>git push origin master</code><br />
             Change <i>master</i> to whatever branch you want to push your changes to.
             <br /><br />
             If you have not cloned an existing repository and want to connect your repository to a remote server, you need to add it with<br />
             <code>git remote add origin &lt;server&gt;</code><br />
-            Now you are able to push your changes to the selected remote server<br />
+            Now you are able to push your changes to the selected remote server<br /> -->
 
         </p>
     </div>
