--- a/index.html
+++ b/index.html
@@ -127,8 +127,12 @@
         <p>
 					Fetch and integrate to master repo</br>
 					<code>git fetch https://devrepo_feature-branch</code><br />
-					Inspect the changes
-					
+					Inspect the changes<br />
+					<code>git checkout master</code><br />
+					<code>git merge FETCH_HEAD</code><br />
+					<code>git push origin master</code><br />
+
+
             <!-- Your changes are now in the <b>HEAD</b> of your local working copy. To send those changes to your remote repository, execute <br />
             <code>git push origin master</code><br />
             Change <i>master</i> to whatever branch you want to push your changes to.
