fixed images for fork website

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="scrollblock block-trees">
         <h2>Clone from forked repositories</h2>
 			</br>
-				<img src="img/picture1.png" alt="" />
+				<img src="img/Picture1.png" alt="" />
 				<p>
 					Clone from you own forked repositories.<br/>
 					<code>git clone https://repo</code>
@@ -115,7 +115,7 @@
     <div class="scrollblock block-add">
         <h2>Publish a feature</h2>
 			</br>
-				<img src="img/picture2.png" alt="" />
+				<img src="img/Picture2.png" alt="" />
 				<p>
             Push to the public repository.<br />
             <code>git push origin feature-branch</code><br />
@@ -129,7 +129,7 @@
     <div class="scrollblock block-remote">
         <h2>Project Maintainer Integrates</h2>
 				</br>
-				<img src="img/picture3.png" alt="" />
+				<img src="img/Picture3.png" alt="" />
 				<p>
 					Fetch and integrate to master repo</br>
 					<code>git fetch https://devrepo_feature-branch</code><br />
@@ -153,7 +153,7 @@
     <div class="scrollblock block-branching">
         <h2>Developers synchronize with official repo</h2>
 			</br>
-				<img src="img/picture4.png" alt="" />
+				<img src="img/Picture4.png" alt="" />
         <p>
 					Synchronize to changes with main codebase master<br />
 					<code>git pull upstream </code><br />
